--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
         mavenLocal()
         google()
         jcenter()
